# pastedev

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.sh  compose.yml  docker-compose.yml  flake.nix  justfile  mprocs.yaml
.sqlx/: query-02d314792b3a15c15a2a287b7e4cd81fa9f41569d6d8f6dd13dfeb9833d9a70c.json  query-069536829c903b8c5afa2abc2370652b3ef31d68421262121084b55d94f5cd2c.json  query-08d8bf5c21045ab5e1ba01c50a6a6c5ce2aaaaf95897d99c97a202aa329e9f25.json  query-0a53433238e30fe3be520d3880423456aa343322e5f73066b83aa6cbf100a68d.json  query-0c3d6075074343cb4dbab9e2c5e68d9ee0532c0bb1218e509360c38c398712c0.json  query-11e96cfd8c2736f13ce55975ea910dd68640f6f14e38a4b3342d514804e3de27.json  query-15ddf6b0f52d096defc8d3264deffdc64d53e112c68a2a09672c8b4b7eacbe6e.json  query-15f1dcbe8ca2311eaf828c2e0158f371a85563141ab966d72dc9077db494d1bf.json  query-16ae56e09e6c3cffa75c96766e2cb522d67040e7efdea1b1daf30b69e419add7.json  query-1e7e74efa399bda04d17638f6d4dc0eca77d6b229c32c013a6b941ac09a9a244.json  query-2111bfa4ed75e1f1a64a3f7487c7b89a3a71b91a06279306f20b58db6d1f9dd1.json  query-25f9161f6b683961bdcfe116a1eba82da7f7d2c49e7488f705524485eed805de.json  query-2937ca8f38c5388668b786bc09c83faa1a0aa60956d4bfc279432cd33502e805.json  query-2d4c4afb62b7392a9f89c848eb1f8ecf3231a42227dfd1ceedb31d80403db989.json  query-35fd4127daa2012a88f83eb33000752b991c7ddfb8250c2e37a6b58908c6a5d2.json  query-3a1a21be7a39e9cddd7ce4265ef848c5aab13c0c290ee4e3bac7bc81a64be76e.json  query-3ae518753220f94953d64a1aebc9ac0fa5739792dd55ae82246292f4cd902700.json  query-40cc616e7b283bf4067e1780269037e45aa4858bc637d2bcdfbbc5c1ae3dcd51.json  query-42084f583756b9e7cea8aa9db75de30111949c179805d2d32eacb1c98dfb4a83.json  query-46eb63248e40ceb47915810e4b190e96bd1fb912f8c70279d8b116b917173683.json  query-4fd750e740fb3bdb819d8cd6dffbbc15d6d038685608d2b83a0f214b2e7dc1fd.json  query-53046621b4686e0f525f0a00ae865c3f0219b2bbb4f3283053622634df4d32de.json  query-54fc9b10474946158f3ad294d77e3de9b55cb0fa69acc9f326f3e4bfc2d16bbb.json  query-554c9e4a70decdcb3e03237216ce19ea94f244f9d089aab606c2716885a2facd.json  query-5da0f5a6f55dd8739ee50e853113424ca1b2d10f1cd53f0841023e8e5d3148fa.json  query-5f04cbe3eb9523f11e8eed43983f8f138ba19a43489b22711b739912420441d8.json  query-6026a5536b1cd7f29346b9241d5b17df128a01664af2323de61fe00ac4f823d1.json  query-642b681225aec31acd22365cf6056349c89cb3bc4c9598a3b15aa912c87791d7.json  query-69323ea2cdfd9c32eb6c8990cbdcffca1c21a4c11c2c2d5a9f809e2e5eaff636.json  query-7103d6be9ead32676ed1a406a6cd5e268b76e5794e9c1fb6d01093c900fa460d.json  query-723f91adcceb68c01007a0c679da60be9895196f88d567e5fb2302571d2a1a62.json  query-725273fbe614ed65cddf3ab50eebed728e4e0d20f05e9aa6c5449925f3e086ea.json  query-732de8655fd43b75f75f586dd298f4539966ef9dba5d14c1c9a8eba6b77879bd.json  query-737236d1f198f745b67ff69665191d4858666557b62850baba5907d0d6047ad1.json  query-74d220a7ef077572fb7e79a3d575ce54714694099c7198d583c0297583edff1c.json  query-77d997797a8295d72007e71b457f2c919052c77bab24e1c607533eb8f9034c72.json  query-78d37f5b5d6437121f38b196c4add056c9d0184ef85836e6b8a10d4c1f7a54ea.json  query-8110bc2ccfbf0e15d64cfcd962409df442fb477ef15237a823c0524c68bf0fe0.json  query-8176f8b4f4197b51aca872b3c56c637da583dd5ce2a28ae5c95cc04a4944e666.json  query-8b29f2751e5aa4555cf73ad8439a1d202c1b9ed0a3f64b374007d1827e65e97c.json  (+31 more)
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  credentials.rs  main.rs  output.rs
crates/cli/src/commands/: auth.rs  delete.rs  get.rs  list.rs  mod.rs  publish.rs  settings.rs  whoami.rs
crates/cli/src/mcp/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: admin.rs  api_key.rs  auth.rs  error.rs  lib.rs  scope.rs  setup.rs  slug.rs  snippet.rs  user.rs
crates/server/: Cargo.toml
crates/server/migrations/: 0001_init.sql  0002_audit_log.sql  0003_drop_snippet_visibility.sql  0004_revoke_legacy_api_keys.sql  0005_snippet_views.sql  0006_visibility_and_expiry.sql  0007_soft_delete.sql
crates/server/src/: assets.rs  audit.rs  config.rs  db.rs  error.rs  main.rs  setup.rs
crates/server/src/api_keys/: handlers.rs
crates/server/src/auth/: api_key.rs  extract.rs  hmac.rs  mod.rs  password.rs  session.rs
crates/server/src/http/: client_ip.rs  fallback_shell.html  mod.rs  rate_limit.rs  shell.rs  snippet_meta.rs
crates/server/src/snippets/: handlers.rs  mod.rs  repo.rs  slug.rs
crates/server/src/users/: admin.rs  handlers.rs  mod.rs  repo.rs  validate.rs
crates/web/: Cargo.toml  Dioxus.toml  index.html  tailwind.css
crates/web/assets/: highlight.worker.js
crates/web/src/: app.rs  config.rs  main.rs  route.rs
crates/web/src/api/: admin.rs  auth.rs  client.rs  error.rs  keys.rs  mod.rs  snippets.rs
crates/web/src/components/: form_field.rs  guarded.rs  mod.rs  modal.rs  shell.rs  splash.rs  toast_dock.rs
crates/web/src/editor/: highlight.rs  mod.rs
crates/web/src/js/: mod.rs
crates/web/src/lib_util/: format.rs  markdown.rs  mod.rs  path.rs  time.rs
crates/web/src/pages/: admin.rs  api_keys.rs  dashboard.rs  mod.rs  pending.rs  register.rs  rejected.rs  setup.rs  signin.rs  status.rs
crates/web/src/state/: auth.rs  mod.rs  toast.rs
crates/web/src/views/: code.rs  html.rs  markdown.rs  mod.rs  shared.rs
pastedev-api/: .env  .gitignore  CLAUDE.md  Cargo.toml  PRODUCT_VISION.md  compose.yml  flake.nix
pastedev-api/.sqlx/: query-0ddef4cff4c9cf6d63d5001a7b083f5f96e32939de00089315b1e72187324086.json  query-14f72eeb6b7e70eeeac57b2c4f270b9dc1b6b3f93b337812916899ca2fdbb732.json  query-4f42bd8b2c8515f74d0aabe5c59bfe5393f2de4881603dc47072b2cd52e091b9.json  query-5948b5779950db7230710b6051dc81390ecc9720b8202b847ab2813032e4b93b.json  query-a4ec7eb34866b4fc6f6bfbdf3887831910774369f0273715345e466d5430ff8f.json  query-c0faf383b14828b0aad6f101a9b8aeefae0d53900fe5700568e697293daf29a1.json  query-eb8c958cd07ef0d7ee954f7943e4327469c0533a47123a24ee5998f07ebfb00b.json
pastedev-api/migrations/: 20250906232408_create_snippets_table.sql
pastedev-api/src/: cleanup.rs  lib.rs  main.rs  routes.rs  snippet.rs  socket.rs
pastedev-api/static/: index.html
src/: http.rs  (+4 more)
(+102 files in other folders)
