[package]
name = "pastedev"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.7"
anyhow = "1.0.57"
serde = "1.0.137"
serde_json = "1.0.81"
rand = "0.8.5"
tracing = "0.1.35"
tracing-subscriber = "0.3"
url = "2.2.2"
bb8 = "0.8.0"
bb8-redis = "0.11.0"
thiserror = "1.0.31"

[dependencies.clap]
version = "3.2.5"
features = ["derive", "env"]

[dependencies.tokio]
version = "1.19.2"
features = ["full"]

[dependencies.redis]
version = "0.21.5"
features = ["tokio-comp"]

[dependencies.tower-http]
version = "0.3.4"
features = ["cors", "fs"]

