[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/server",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.82"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
nanoid = "0.4"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
url = "2"

# server-only
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "util", "limit"] }
hyper = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "time", "json", "ipnetwork"] }
argon2 = "0.5"
ipnetwork = "0.20"
rust-embed = { version = "8", features = ["debug-embed", "include-exclude"] }
mime_guess = "2"
constant_time_eq = "0.4"
rand = "0.8"

# cli-only
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
dirs = "5"

# shared with core
regex = "1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
