[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/server",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.82"
# Adjust to match the real GitHub repo before the first `git tag v0.1.0`.
# cargo-dist reads this to build install-script URLs and release-page links.
repository = "https://github.com/volandevovan/pastedev"

# cargo-dist: only pastedev-cli ships through GitHub Releases / install.sh.
# pastedev-server is delivered as a Docker image (see Dockerfile); pastedev-core is a
# library, no binary to publish. See plan/09-deployment.html for the full story.
#
# Linux targets are musl (statically linked) instead of gnu — the binary then
# runs on every Linux (alpine, debian, RHEL, etc.) regardless of glibc
# version on the user's machine. Rustls is pure-Rust so we have no openssl
# dependency to worry about.
[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["shell", "powershell"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
# Auto-pick the latest tag matching pastedev-cli-v*.
tag-namespace = "pastedev-cli"
# Compress installer-shipped tarballs with zstd for small downloads.
unix-archive = ".tar.xz"
windows-archive = ".zip"
# Don't auto-publish a Homebrew tap or other registries from this repo;
# operators who want one can fork the workflow.
publish-jobs = []
# Build each shipping bin in isolation (`cargo build --bin <name>`) instead of
# the default `cargo build --workspace`. Keeps pastedev-server (dist = false)
# out of the release build — it has a `rust-embed` macro that requires
# web/dist/ to exist at compile time, which it doesn't on a clean CI checkout.
precise-builds = true
# Install the CLI somewhere that's actually on PATH for users without rustup.
# cargo-dist's default is $CARGO_HOME/bin (~/.cargo/bin), which is only useful
# if you already have Rust tooling. Fall through XDG locations to ~/.local/bin.
install-path = ["$XDG_BIN_HOME/", "$XDG_DATA_HOME/../bin", "~/.local/bin"]

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
nanoid = "0.4"
sha2 = "0.10"
base64 = "0.22"
url = "2"

# server-only
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "util", "limit"] }
tower_governor = { version = "0.8" }
governor = "0.10"
hyper = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "time", "json", "ipnetwork"] }
argon2 = "0.5"
ipnetwork = "0.20"
rust-embed = { version = "8", features = ["debug-embed", "include-exclude"] }
mime_guess = "2"
constant_time_eq = "0.4"
rand = "0.8"

# cli-only
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
dirs = "5"

# shared with core
regex = "1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
