[package]
name = "pastedev-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
clap = { version = "4.5.47", features = ["derive", "env"] }
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "uuid", "chrono"]}
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
