[package]
name = "pastedev-cli"
description = "Terminal client + MCP server for pastedev"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pastedev-cli"
path = "src/main.rs"

[dependencies]
pastedev-core = { path = "../core" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
url = { workspace = true }
