[package]
name = "pastedev-server"
version.workspace = true
edition.workspace = true
license.workspace = true

# Don't ship pastedev-server through cargo-dist / GitHub Releases — it's tied to
# Postgres + an embedded SPA, so its delivery channel is the multi-stage Docker
# image at /Dockerfile, not a standalone binary on a user's laptop.
[package.metadata.dist]
dist = false

[[bin]]
name = "pastedev-server"
path = "src/main.rs"

[dependencies]
pastedev-core = { path = "../core" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
constant_time_eq = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }
governor = { workspace = true }
hyper = { workspace = true }
sqlx = { workspace = true }
argon2 = { workspace = true }
ipnetwork = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
nanoid = { workspace = true }
regex = { workspace = true }
pulldown-cmark = { workspace = true }
